0.19
 - Add page_id to Lexeme.

0.18 2022-07-09T16:16:36+02:00
 - Add id to Lexeme.
 - Add id to Lexeme::Wikidata::DogCzechNoun fixture.
 - Add alias in another language to Datatype::Item::Wikidata::Dog fixture.
 - Unify LICENSE AND COPYRIGHT section in doc.

0.17 2022-07-07T21:33:43+02:00
 - Add doc for Snak::Wikidata::GivenName::Douglas fixture.
 - Add fixture for GrammaticalGender::Masculine.
 - Improve Lexeme::Wikidata::DogCzechNoun fixture to reality.
 - Improve Property::Wikidata::InstanceOf object.
 - Remove ';;' from example.
 - Rename Reference::Wikidata::Fixture1 fixture to VIAF.

0.16 2022-06-25T16:25:54+02:00
 - Add Dog item fixture.
 - Add InstanceOf::CommonLivingOrganism statement fixture.
 - Rename Human fixture to better DouglasAdams.
 - Update README file.

0.15 2022-06-25T11:42:12+02:00
 - Fix Mediainfo doc.
 - Add fixture for Mediainfo.
 - Add fixture for MediainfoSnak.
 - Add fixture for MediainfoStatement.

0.14 2022-06-24T13:37:55+02:00
 - Add modified and explicit ns parameters to Item fixture.
 - Add modified parameter to Lexeme fixture.
 - Add modified parameter to Property fixture.
 - Add tests for fixtures.
 - Add tests for Lexeme.
 - Change ns for Lexeme to 146 (as Wikidata).

0.13 2022-06-23T00:09:39+02:00
 - Add tests for fixtures.
 - Add tests for Property.
 - Fix ns default value in doc of Property.
 - Fix place of error test in constructor in Item.

0.12 2022-05-29T20:11:07+02:00
 - Add Property datatype.
 - Add test instance for Property.
 - Fix minimal version of List::Util with none().
 - Fix versions in test instances.
 - Improve test instance for Human item.

0.11 2022-05-28T15:13:50+02:00
 - Add test instances.
 - Fix check_language().
 - Fix Unicode conversions in Item doc example.
 - Improve example in Form documentation.
 - Improve example in Sense documentation.
 - Update copyright years.

0.10 2021-07-17T15:11:15+02:00
 - Add test for Wikibase::Datatype::Value::Monolingual with utf8 text.
 - Improve doc for Snak.
